# Zag-Smalltalk

./: .gitattributes  .gitignore  .gitmodules  .project  AGENTS.md  LICENSE  README.md  build.zig
.obsidian/: config  workspace
.zed/: tasks.json
Documentation/: AST_Classes.md  Abstract.md  Benchmarking.md  Block Closures.md  Branch Prediction.md  Copy-and-Patch.md  ESUG2025.md  Encoding-Mix.md  Encoding-Modified-Spur-Old.md  Encoding-Modified-Spur.md  Encoding-Modified2-Spur.md  Encoding-NaN.md  Encoding-Zag.md  Encoding.md  Execution.md  Experiments.md  FFI & Parallelism.md  Final Analysis.md  Flow-Analysis.md  Garbage Collection.md  Garbage_Collection.md  Hacking.md  Image Interaction.md  ImageFormat.md  Inlining.md  Interpreter.md  Jit.md  LLM & GenAI.md  Mapping.md  Memory Management.md  MemoryManagement.md  Message-sends-Pharo.csv  Multi-Processing.md  Note.md  Notes.md  Optimizations.md  Performance.md  Primitives.md  README.md  Symbol.md  (+6 more)
Smalltalk/: .properties
Zag-Smalltalk/: .gitignore  README.md
benchmarks/: RandomMatrix  deltaBlue.st  fpu-trace-stats.py  richards.st
c/: Makefile  ast.h  eg1.c  halfsiphash.c  halfsiphash.h  sacTest.c
llvm/: example.zig  simpleAdd.zig  threadedFn.zig
reference/: MistDesign.md  Reference.md
rust/: Cargo.toml
rust/benches/: my_benchmark.rs
rust/src/: class.rs  interpreter.rs  main.rs  memory.rs  object.rs  symbol.rs  treap.rs
rust/src/interpreter/: primitives.rs  stack.rs
rust/src/interpreter/primitives/: double.rs  object.rs  smallInteger.rs
scripts/: format  latex-table.py  run-benchmarks
zig/: sieve  (+40 more)
(+1863 files in other folders)
