[package]
name = "smalltalk"
version = "0.1.0"
authors = ["Dave Mason <dmason@ryerson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mmap = "*"
libc = "0.2"
lazy_static = "*"
once_cell = "*"
lazy-init = "*"
static_init = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
