[package]
name = "smalltalk"
version = "0.1.0"
authors = ["Dave Mason <dmason@ryerson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mmap = "*"
libc = "0.2"
once_cell = "*"
static_assertions = "1.1.0"

[dev-dependencies]
lazy_static = "*"
lazy-init = "*"
static_init = "*"
criterion = "0.3"
late-static = "*"

[[bench]]
name = "my_benchmark"
harness = false
