[package]
name = "smalltalk"
version = "0.1.0"
authors = ["Dave Mason <dmason@ryerson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mmap = "*"
libc = "0.2"
errno = "*"
#once_cell = "*"
static_assertions = "1.1.0"
lazy_static = "*"

[dev-dependencies]
lazy_static = "*"
lazy-init = "*"
static_init = "*"
late-static = "*"
criterion = "0.3"
late-static = "*"
rand = "*"

[[bench]]
name = "my_benchmark"
harness = false
